fix wrap

--- a/assets/css/adminlte/_navs.scss
+++ b/assets/css/adminlte/_navs.scss
@@ -53,5 +53,8 @@
   .objectSummaryGlobalHeader {
     font-size: small;
     left: -3px;
+    white-space: nowrap;
+    display: block;
+    overflow: hidden;
   }
 }
